<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundMainActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="main.MainActivity" >

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText01"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/edit_message3"
        android:paddingEnd="0dp"
        android:paddingLeft="25dp"
        android:paddingRight="0dp"
        android:paddingStart="25dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/edit_message1"
        android:paddingEnd="0dp"
        android:paddingLeft="25dp"
        android:paddingRight="0dp"
        android:paddingStart="25dp" />

    <EditText
        android:id="@+id/EditText03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText02"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/edit_message4"
        android:paddingEnd="0dp"
        android:paddingLeft="25dp"
        android:paddingRight="0dp"
        android:paddingStart="25dp" />

    <EditText
        android:id="@+id/EditText04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText03"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edit_message2"
        android:paddingEnd="0dp"
        android:paddingLeft="25dp"
        android:paddingRight="0dp"
        android:paddingStart="25dp" />

    <EditText
        android:id="@+id/EditText05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/fileName"
        android:paddingEnd="0dp"
        android:paddingLeft="25dp"
        android:paddingRight="0dp"
        android:paddingStart="25dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/EditText04"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@color/ButtonBackgroundColor"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        android:textColor="@color/ButtonTextColor" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button2"
        android:layout_marginTop="15dp"
        android:background="@color/OrderButtonColor"
        android:gravity="center"
        android:onClick="readOrder"
        android:text="@string/newOrder" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:background="@color/redBackground"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:onClick="readSFBOrder"
        android:text="@string/readSFB" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/ButtonBackgroundColor"
        android:onClick="listFiles"
        android:text="@string/list_files" />

</RelativeLayout>